2008-04-22  David Smith  <dsmith@redhat.com>

	* systemtap.base/utrace_p5.exp: Added run-time utrace tests.

2008-04-21  David Smith  <dsmith@redhat.com>

	* parseko/utrace01.stp: Renamed from semko/utrace02.stp (since it
	received a parse error, not a semantic error).

2008-04-21  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/args.exp: Remove obsolete "-d" option.

2008-04-18  David Smith  <dsmith@redhat.com>

	* systemtap.base/utrace_p4.exp: Added exec probe test.

	* buildok/utrace01.stp: Removed.
	* buildok/utrace02.stp: Ditto.
	* buildok/utrace03.stp: Ditto.
	* systemtap.base/utrace_p4.exp: Rewrote buildok tests to check for
	kernel utrace support.

2008-04-17  David Smith  <dsmith@redhat.com>

	* buildok/utrace01.stp: New test.
	* buildok/utrace02.stp: Ditto.
	* buildok/utrace03.stp: Ditto.
	* semko/utrace01.stp: Ditto.
	* semko/utrace02.stp: Ditto.
	* semko/utrace03.stp: Ditto.
	* semko/utrace04.stp: Ditto.
	* semko/utrace05.stp: Ditto.
	* semko/utrace06.stp: Ditto.
	* semko/utrace07.stp: Ditto.
	* semko/utrace08.stp: Ditto.
	* semko/utrace09.stp: Ditto.
	* semko/utrace10.stp: Ditto.
	* semko/utrace11.stp: Ditto.
	* semko/utrace12.stp: Ditto.
	* semko/utrace13.stp: Ditto.

2008-04-10  Frank Ch. Eigler  <fche@elastic.org>

	PR 2949
	* systemtap.base/cmd_parse.exp: Add "-l" listing test.

2008-04-04  Masami Hiramatsu <mhiramat@redhat.com>

	PR 5528
	* systemtap.stress/conversions.exp: Update a script to catch up
	recently changes of conversions.stp.

2008-03-31  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bump version to 0.7.
	* configure: Regenerated.

2008-03-27  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/cmd_parse.exp: Don't assume $SHELL=bash.

2008-03-23  Frank Ch. Eigler  <fche@elastic.org>

	* lib/stap_run.exp (stap_run): Ignore missing debuginfo warnings.
	Try harder to kill stap child in case of timeouts and errors.

2008-03-23  Frank Ch. Eigler  <fche@elastic.org>

	PR 5980.