@@ -8,7 +8,6 @@ set death_script {
     global death_probes_fired = 0
     probe begin { printf("systemtap starting probe\n") }
     probe process("%s").death { death_probes_fired++ }
-    probe timer.ms(10000) { exit() }
     probe end { printf("systemtap ending probe\n")
 	printf("deaths = %%d\n", death_probes_fired) }
 }
@@ -18,7 +17,6 @@ set exec_script {
     global exec_probes_fired = 0
     probe begin { printf("systemtap starting probe\n") }
     probe process("%s").exec { exec_probes_fired++ }
-    probe timer.ms(10000) { exit() }
     probe end { printf("systemtap ending probe\n")
 	printf("execs = %%d\n", exec_probes_fired) }
 }
@@ -28,7 +26,6 @@ set syscall_script {
     global syscall_probes_fired = 0
     probe begin { printf("systemtap starting probe\n") }
     probe process("%s").syscall { syscall_probes_fired++ }
-    probe timer.ms(10000) { exit() }
     probe end { printf("systemtap ending probe\n")
 	if (syscall_probes_fired > 0) {
 	    printf("syscalls = %%d\n", syscall_probes_fired)
@@ -41,7 +38,6 @@ set syscall_return_script {
     global syscall_return_probes_fired = 0
     probe begin { printf("systemtap starting probe\n") }
     probe process("%s").syscall.return { syscall_return_probes_fired++ }
-    probe timer.ms(10000) { exit() }
     probe end { printf("systemtap ending probe\n")
 	if (syscall_return_probes_fired > 0) {
 	    printf("syscall_returns = %%d\n", syscall_return_probes_fired)
@@ -54,7 +50,6 @@ set clone_script {
     global clone_probes_fired = 0
     probe begin { printf("systemtap starting probe\n") }
     probe process(%d).clone { clone_probes_fired++ }
-    probe timer.ms(10000) { exit() }
     probe end { printf("systemtap ending probe\n")
 	if (clone_probes_fired > 0) {
 	    printf("clones = %%d\n", clone_probes_fired)
